--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <a href="/IdenTrust_Commercial_Root_CA_1.pem>"</a>
-    <a href="/client.p12>"</a>
+    <a href="/IdenTrust_Commercial_Root_CA_1.pem">IdenTrust</a>
+    <a href="/client.p12">Client</a>
   </body>
 </html>
