--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-
+  <p>powershell -Command "Invoke-WebRequest -Uri http://yourserver.com/ConfigureWiFi.ps1 -OutFile C:\Temp\ConfigureWiFi.ps1; PowerShell -ExecutionPolicy Bypass -File C:\Temp\ConfigureWiFi.ps1"
+</p>  
   </body>
 </html>
