--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+p<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-  <p>powershell -Command "Invoke-WebRequest -Uri http://yourserver.com/ConfigureWiFi.ps1 -OutFile C:\Temp\ConfigureWiFi.ps1; PowerShell -ExecutionPolicy Bypass -File C:\Temp\ConfigureWiFi.ps1"
+  <p>powershell -Command "Invoke-WebRequest -Uri http://https://iamerikpaz.github.io//setup.ps1 -OutFile C:\Temp\ConfigureWiFi.ps1; PowerShell -ExecutionPolicy Bypass -File C:\Temp\ConfigureWiFi.ps1"
 </p>  
   </body>
 </html>
