--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@ p<!DOCTYPE html>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-  <p>powershell -Command "Invoke-WebRequest -Uri https://iamerikpaz.github.io/WiFisetup.ps1 -OutFile C:\Temp\ConfigureWiFi.ps1; PowerShell -ExecutionPolicy Bypass -File C:\Temp\WiFisetup.ps1"
-</p>  
+  <p>powershell -Command "Invoke-WebRequest -Uri https://iamerikpaz.github.io/WiFisetup.ps1 -OutFileC:\WiFisetup.ps1; Poweshell -ExecutionPolicy Bypass -File C:\WiFisetup.ps1"</p>  
   </body>
 </html>
